unpackaged/main/default/objects/CanadaSMSLocaleSettings__mdt/CanadaSMSLocaleSettings__mdt.object-meta.xml
<CustomObject>
    <label>CanadaSMSLocaleSettings</label>
    <pluralLabel>CanadaSMSLocaleSettings</pluralLabel>
</CustomObject>