unpackaged/main/default/objects/CanadaSMSLocaleSettings__mdt/fields/BrandId__c.field-meta.xml
<CustomField>
    <fullName>BrandId__c</fullName>
    <label>BrandId</label>
    <length>2</length>
    <type>Text</type>
</CustomField>