unpackaged/main/default/objects/CanadaSMSLocaleSettings__mdt/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>Locale</label>
    <length>5</length>
    <type>Text</type>
</CustomField>